Change SageMaker notebooks and housekeeping

--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/client_manager_microservices/tps/client_manager_adminstrator_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/client_manager_microservices/tps/client_manager_adminstrator_sample.ipynb
@@ -54,10 +54,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF Data Lake platform\n",
-    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' team of ddk.json file\n",
+    "TEAM_NAME = \"demoteam\"\n",
     "\n",
-    "## The Dataset Name configured in the SDLF Data Lake platform\n",
+    "## The Dataset Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' dataset of ddk.json file\n",
     "amc_dataset_name = \"amcdataset\"\n",
     "\n",
     "## Region of the AMC instance\n",
@@ -71,16 +73,7 @@
     "\n",
     "amc_s3_bucket_name = \"<ENTER AMC S3 BUCKET NAME>\"\n",
     "\n",
-    "amc_data_upload_acct = \"<ENTER ACCOUNT ID>\"\n",
-    "\n",
-    "## A Comma seperated list of Advertiser IDs. This can be retrieved from the ticket raised to the AMC team. \n",
-    "## It is the list provided while raising the AMC instance\n",
-    "\n",
-    "advertiser_ids = \"\"\n",
-    "\n",
-    "## A Comma seperated list of Entity IDs. This can be retrieved from the ticket raised to the AMC team. \n",
-    "## It is the list provided while raising the AMC instance\n",
-    "entity_ids = \"\""
+    "amc_data_upload_acct = \"<ENTER ACCOUNT ID>\""
    ]
   },
   {
@@ -127,7 +120,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = customer.get_customers_config(ATS_TEAM_NAME=ATS_TEAM_NAME)\n",
+    "df = customer.get_customers_config(TEAM_NAME=TEAM_NAME)\n",
     "df.head()"
    ]
   },
@@ -163,11 +156,7 @@
     "        \n",
     "        \"aws_orange_account_id\":<AMC Orange Account. This can be requested or retrieved from the ticket raised to the AMC team>,\n",
     "                \n",
-    "        \"bucket_name\":<Name of the bucket for the AMC Dataset landing bucket in your AWS account. This can be requested or retrieved from the ticket raised to the AMC team>,\n",
-    "        \n",
-    "        \"advertiser_ids\":<Comma seperated list of advertiser ids. This can be retrieved from the ticket raised to the AMC team. It is the list provided while raising the AMC instance>,\n",
-    "        \n",
-    "        \"entity_ids\":<Comma seperated list of Entity ids. This can be retrieved from the ticket raised to the AMC team. It is the list provided while raising the AMC instance>\"\n",
+    "        \"bucket_name\":<Name of the bucket for the AMC Dataset landing bucket in your AWS account. This can be requested or retrieved from the ticket raised to the AMC team>\n",
     "    }\n",
     "}\n",
     "```"
@@ -192,9 +181,7 @@
     "        \"amc_dataset_name\":amc_dataset_name,\n",
     "        \"endpoint_url\": amc_api_endpoint,\n",
     "        \"aws_orange_account_id\": amc_data_upload_acct,\n",
-    "        \"bucket_name\": amc_s3_bucket_name,\n",
-    "        \"advertiser_ids\": advertiser_ids,\n",
-    "        \"entity_ids\": entity_ids\n",
+    "        \"bucket_name\": amc_s3_bucket_name\n",
     "    }\n",
     "}\n",
     "\n",
@@ -223,7 +210,7 @@
     "\n",
     "import boto3\n",
     "\n",
-    "dynamodb_resp_wr = customer.set_customers_config(customer_details=customer_details, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_wr = customer.set_customers_config(customer_details=customer_details, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   }
