--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/customerConfig_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/customerConfig_wfm_sample.ipynb
@@ -38,8 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF Data Lake platform\n",
-    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' team of ddk.json file\n",
+    "TEAM_NAME = \"demoteam\"\n",
     "\n",
     "aws_region = \"us-east-1\"\n",
     "\n",
@@ -162,8 +163,8 @@
     "    \"amcWorkflowPackages\": f\"{customerId}\",\n",
     "    \"maximumConcurrentWorkflowExecutions\": 10,\n",
     "    \"WFM\": {\n",
-    "      \"amcWorkflowExecutionDLQSQSQueueName\": f'wfm-{ATS_TEAM_NAME}--{ENV}-workflowExecution-{customerId}-DLQ.fifo',\n",
-    "      \"amcWorkflowExecutionSQSQueueName\": f'wfm-{ATS_TEAM_NAME}--{ENV}-workflowExecution-{customerId}.fifo',\n",
+    "      \"amcWorkflowExecutionDLQSQSQueueName\": f'wfm-{TEAM_NAME}--{ENV}-workflowExecution-{customerId}-DLQ.fifo',\n",
+    "      \"amcWorkflowExecutionSQSQueueName\": f'wfm-{TEAM_NAME}--{ENV}-workflowExecution-{customerId}.fifo',\n",
     "      \"enableWorkflowLibraryNewContent\": True,\n",
     "      \"enableWorkflowLibraryRemoval\": True,\n",
     "      \"enableWorkflowLibraryScheduleCreation\": True,\n",
@@ -171,16 +172,16 @@
     "      \"enableWorkflowLibraryUpdates\": True,\n",
     "      \"runWorkflowByCampaign\": {\n",
     "        \"campaignAttributionLagDays\": 14,\n",
-    "        \"campaignListDatabaseName\": f'{ATS_TEAM_NAME}_amcdataset_dev_analytics',\n",
+    "        \"campaignListDatabaseName\": f'{TEAM_NAME}_amcdataset_dev_analytics',\n",
     "        \"campaignListTableName\": f'{customerId}_active_campaigns_advertisers_v1_adhoc',\n",
     "        \"defaultWorkflowExecutionTimeZone\": \"America/New_York\",\n",
     "        \"maximumCampaignAgeDays\": 90,\n",
     "        \"maximumCampaignEndAgeDays\": 18,\n",
     "        \"minimumCampaignAgeDays\": 3\n",
     "      },\n",
-    "      \"snsTopicArn\": f'arn:aws:sns:{aws_region}:{aws_account_number}:wfm-{ATS_TEAM_NAME}-SNSTopic-{ENV}',\n",
+    "      \"snsTopicArn\": f'arn:aws:sns:{aws_region}:{aws_account_number}:wfm-{TEAM_NAME}-SNSTopic-{ENV}',\n",
     "      \"syncWorkflowStatuses\": {\n",
-    "        \"amcWorkflowExecutionTrackingDynamoDBTableName\": f'wfm-{ATS_TEAM_NAME}-AMCExecutionStatus-{ENV}',\n",
+    "        \"amcWorkflowExecutionTrackingDynamoDBTableName\": f'wfm-{TEAM_NAME}-AMCExecutionStatus-{ENV}',\n",
     "        \"lastSyncedTime\": \"2021-06-09T23:31:55\",\n",
     "        \"latestLastUpdatedTime\": \"2021-06-09T22:54:24Z\",\n",
     "        \"workflowExecutionStatusLookBackHours\": 72,\n",
@@ -215,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = customerConfig.set_customer_config(customer_details=customer_config_record, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_wr = customerConfig.set_customer_config(customer_details=customer_config_record, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -238,7 +239,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = customerConfig.get_customer_config(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "df = customerConfig.get_customer_config(TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -257,7 +258,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_dl = customerConfig.delete_customer_config(customerId=customerId, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_dl = customerConfig.delete_customer_config(customerId=customerId, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
