--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowLibrary_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowLibrary_wfm_sample.ipynb
@@ -39,8 +39,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF Data Lake platform\n",
-    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' team of ddk.json file\n",
+    "TEAM_NAME = \"demoteam\"\n",
     "\n",
     "ENV=\"dev\""
    ]
@@ -960,7 +961,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = workflowLibrary.set_workflow_record(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_wr = workflowLibrary.set_workflow_record(workflow_details=workflow, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -983,7 +984,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = workflowLibrary.get_workflow_record(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "df = workflowLibrary.get_workflow_record(TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -1003,7 +1004,7 @@
    "outputs": [],
    "source": [
     "workflowId = 'exposure_group_analysis' # Enter the workflowId of the record that needs to be deleted \n",
-    "dynamodb_resp_dl = workflowLibrary.delete_workflow_record(workflowId=workflowId, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_dl = workflowLibrary.delete_workflow_record(workflowId=workflowId, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
