--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowSchedules_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflowSchedules_wfm_sample.ipynb
@@ -38,8 +38,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF Data Lake platform\n",
-    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' team of ddk.json file\n",
+    "TEAM_NAME = \"demoteam\"\n",
     "\n",
     "aws_region = 'us-east-1'\n",
     "ENV=\"dev\"\n",
@@ -156,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = workflowSchedules.set_workflow_schedule(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_wr = workflowSchedules.set_workflow_schedule(workflow_details=workflow, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -179,7 +180,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = workflowSchedules.get_workflow_schedule(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "df = workflowSchedules.get_workflow_schedule(TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -199,7 +200,7 @@
    "outputs": [],
    "source": [
     "wf_name = f'wfm-{customerId}-exposure_group_analysis_v1'\n",
-    "dynamodb_resp_dl = workflowSchedules.delete_workflow_schedule(customerId=customerId, workflowName=wf_name, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_dl = workflowSchedules.delete_workflow_schedule(customerId=customerId, workflowName=wf_name, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
