--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflow_invoke_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflow_invoke_wfm_sample.ipynb
@@ -36,8 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF Data Lake platform\n",
-    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' team of ddk.json file\n",
+    "TEAM_NAME = \"demoteam\"\n",
     "\n",
     "aws_region = 'us-east-1'\n",
     "ENV=\"dev\"\n",
@@ -117,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = workflowInvoke.invoke_workflow(workflow, ATS_TEAM_NAME, ENV)\n",
+    "response = workflowInvoke.invoke_workflow(workflow, TEAM_NAME, ENV)\n",
     "response"
    ]
   }
