--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflows_wfm_sample.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/workflows_wfm_sample.ipynb
@@ -41,8 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## The Team Name configured in the SDLF Data Lake platform\n",
-    "ATS_TEAM_NAME = \"demoteam\"\n",
+    "## The Team Name configured in the Data Lake platform\n",
+    "# This is the same value passed in the 'data_lake_parameters' team of ddk.json file\n",
+    "TEAM_NAME = \"demoteam\"\n",
     "\n",
     "aws_region = 'us-east-1'\n",
     "ENV=\"dev\"\n",
@@ -976,14 +977,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "390fde8b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "1a5b225d",
    "metadata": {},
@@ -998,7 +991,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dynamodb_resp_wr = workflows.set_workflow_record(workflow_details=workflow, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_wr = workflows.set_workflow_record(workflow_details=workflow, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_wr"
    ]
   },
@@ -1021,7 +1014,7 @@
     "pd.set_option('max_colwidth', None)\n",
     "pd.set_option('max_rows', None)\n",
     "\n",
-    "df = workflows.get_workflow_record(ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "df = workflows.get_workflow_record(TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "df.head()"
    ]
   },
@@ -1041,7 +1034,7 @@
    "outputs": [],
    "source": [
     "workflowId = 'exposure_group_analysis_v1' # Enter the workflowId of the record that needs to be deleted \n",
-    "dynamodb_resp_dl = workflows.delete_workflow_record(customerId=customerId, workflowId=workflowId, ATS_TEAM_NAME=ATS_TEAM_NAME, ENV=ENV)\n",
+    "dynamodb_resp_dl = workflows.delete_workflow_record(customerId=customerId, workflowId=workflowId, TEAM_NAME=TEAM_NAME, ENV=ENV)\n",
     "dynamodb_resp_dl"
    ]
   },
