Fix customerId to customer_id SageMaker

--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
@@ -250,7 +250,7 @@
    "source": [
     "# Workflow record\n",
     "workflow = {\n",
-    "  \"customerId\": customerId,\n",
+    "  \"customerId\": customer_id,\n",
     "  \"defaultSchedule\": {\n",
     "    \"automaticDeploySchedule\": False,\n",
     "    \"Description\": \"Runs the time_to_conversion workflow. \",\n",
@@ -310,7 +310,7 @@
    "source": [
     "# Workflow record\n",
     "workflow =  {\n",
-    "  \"customerId\": customerId,\n",
+    "  \"customerId\": customer_id,\n",
     "  \"Description\": \"Runs the time_to_conversion workflow looking back to 90 days prior\",\n",
     "  \"Input\": {\n",
     "    \"payload\": {\n",
@@ -321,7 +321,7 @@
     "      \"workflowId\": \"time_to_conversion_v1\"\n",
     "    }\n",
     "  },\n",
-    "  \"Name\": f'wfm-{customerId}-time_to_conversion'\n",
+    "  \"Name\": f'wfm-{customer_id}-time_to_conversion'\n",
     "}"
    ]
   },
@@ -417,7 +417,7 @@
     "year = '{:04d}'.format(d.year)\n",
     "\n",
     "#Retrieving S3 Key for Processed Data\n",
-    "s3_prefix = \"post-stage/{}/{}/{}_time_to_conversion_v1_adhoc/customer_hash={}/export_year={}/export_month={}\".format(TEAM_NAME, amc_dataset_name, customerId, customerId, year, month)\n",
+    "s3_prefix = \"post-stage/{}/{}/{}_time_to_conversion_v1_adhoc/customer_hash={}/export_year={}/export_month={}\".format(TEAM_NAME, amc_dataset_name, customer_id, customer_id, year, month)\n",
     "response = s3_client.list_objects(Bucket=bucket_name, Prefix= s3_prefix)\n",
     "s3_key = \"/\".join(response[\"Contents\"][0][\"Key\"].split(\"/\")[:-1])\n",
     "\n",
