--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -1,14 +1,23 @@
-:quickstart-project-name: quickstart-repo-name
-:quickstart-github-org: aws-quickstart
-:partner-product-name: Full Product Name
-:partner-product-short-name: Product Name
-:partner-company-name: Example Company Name, Ltd.
-:doc-month: January
+// Change the following attributes.
+:quickstart-project-name: quickstart-amazon-marketing-cloud
+:partner-product-name: AMC Analytics on AWS Solution
+// For the following attribute, if you have no short name, enter the same name as partner-product-name.
+:partner-product-short-name: AMC Analytics
+// If there's no partner, comment partner-company-name.
+:partner-company-name: Ad Tech Solutions
+:doc-month: March
 :doc-year: 2022
-:partner-contributors: John Smith, {partner-company-name}
-// :other-contributors: Akua Mansa, Trek10
-:aws-contributors: Janine Singh, AWS IoT Partner team
-:aws-ia-contributors: Toni Jones, AWS Integration & Automation team
-:deployment_time: 15 minutes
+// Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
+:partner-contributors: Arpan Shah, Naomi Joshi, and Chaitra Nayak, Ad Tech Solutions
+:aws-contributors: Chip Reno, AWS WW AD & Mktg Sols GTMS
+:quickstart-contributors: Troy Ameigh, AWS Integration & Automation team
+:other-contributors: Ramesh Jetty, Brian Maguire, Bret Pontillo, Noah Paige, Alex Burkleaux, Eric Beard,Igor Londero Gentil
+
+
+// For deployment_time, use minutes if deployment takes an hour or less,
+// for example, 30 minutes or 60 minutes.
+// Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
+// for example, 1.25 hours, 2 hours, 2.5 hours.
+:deployment_time: 1.5 hours
 :default_deployment_region: us-east-1
-// :private_repo:
+:parameters_as_appendix:
