--- a/docs/deployment_guide/partner_editable/licenses.adoc
+++ b/docs/deployment_guide/partner_editable/licenses.adoc
@@ -1,3 +1,3 @@
-// Include details about any licenses and how to sign up. Provide links as appropriate.
+// Include details about any licenses and how to sign up. Provide links as appropriate. If no licenses are required, clarify that. The following paragraphs provide examples of details you can provide. Remove italics, and rephrase as appropriate.
 
-There is no cost to use this Quick Start, but you will be billed for any AWS services or resources that this Quick Start deploys. For more information, see the http://general-content-file[AWS Quick Start General Content Guide^].
+No licenses are required to deploy this Quick Start. All of the AWS services used in this deployment incur usage costs.
