--- a/docs/deployment_guide/partner_editable/_settings.adoc
+++ b/docs/deployment_guide/partner_editable/_settings.adoc
@@ -10,7 +10,7 @@
 // Uncomment the following "contributor" attributes as appropriate. If the partner agrees to include names, enter contributor names for every line we use. If partner doesn't want to include names, delete all placeholder names and keep only "{partner-company-name}" and "AWS Integration & Automation team."
 :partner-contributors: Arpan Shah, Naomi Joshi, and Chaitra Nayak, Ad Tech Solutions
 :aws-contributors: Chip Reno, AWS WW AD & Mktg Sols GTMS
-:quickstart-contributors: Troy Ameigh, AWS Integration & Automation team
+:aws-ia-contributors: Troy Ameigh, AWS Integration & Automation team
 :other-contributors: Ramesh Jetty, Brian Maguire, Bret Pontillo, Noah Paige, Alex Burkleaux, Eric Beard,Igor Londero Gentil
 
 
