--- a/docs/deployment_guide/partner_editable/architecture.adoc
+++ b/docs/deployment_guide/partner_editable/architecture.adoc
@@ -2,9 +2,9 @@
 
 [#architecture1]
 .Quick Start architecture for {partner-product-short-name} on AWS
-image::../images/architecture_diagram.png[Architecture]
+image::../docs/deployment_guide/images/architecture_diagram.png[Architecture]
 
-This Quick Start deploys the {partner-product-short-name}, which contains the following four modules:
+As shown in <<architecture1>>, the Quick Start sets up the following, which contains the following four modules:
 
 * *AWS DataOps Development Kit (DDK)*: This module is based on the open-source https://github.com/awslabs/aws-ddk[AWS DataOps Development Kit (DDK)^] of AWS Professional Services and configured to process advertising-related datasets in AMC.
 * *Tenant Provisioning Service*: Part of the Client Manager MicroServices package, this module is an Amazon Ad Tech solution for managing multiple Amazon Marketing Cloud clients.
