Add QS Automation Notebook

--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "38982f69",
+   "id": "63dd0be9",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8990d5cc",
+   "id": "648e49e7",
    "metadata": {},
    "source": [
     "#### Import Libraries"
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9c5642a",
+   "id": "3cd37af0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8d6189a",
+   "id": "f863f231",
    "metadata": {},
    "source": [
     "#### Define Global Configurations"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9994b09",
+   "id": "18cf345e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e8f61ec",
+   "id": "ecad4a8f",
    "metadata": {},
    "source": [
     "#### Step 1: Onboard A New Client\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e56d1550",
+   "id": "7ab41f6c",
    "metadata": {},
    "source": [
     "##### Define your Client Configuration\n",
@@ -104,14 +104,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a799a7f3",
+   "id": "7f3b3f69",
    "metadata": {},
    "outputs": [],
    "source": [
     "customer_details = {\n",
     "    \"customer_id\": customer_id,\n",
     "    \"customer_name\":\"DemoCustomer\",     #OPTIONAL: Change to your desired Customer Name\n",
-    "    \"customer_type\": \"ENDEMIC\",\n",
+    "    \"customer_type\": \"ENDEMIC\",         #Can Be <ENDEMIC or NON-ENDEMIC>\n",
     "    \"region\":aws_region,\n",
     "    \"amc\":{\n",
     "        \"amc_dataset_name\":amc_dataset_name,\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9d42e63",
+   "id": "5f90624e",
    "metadata": {},
    "source": [
     "##### Submit Your Client Configuration to Create The AMC S3 Bucket\n",
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0dfde41",
+   "id": "a71bb7b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11623a2e",
+   "id": "e0c4208a",
    "metadata": {},
    "source": [
     "_Wait a few minutes for the AMC S3 Bucket to be deployed BEFORE moving to Step #2._\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d62a4407",
+   "id": "c1fc5dd7",
    "metadata": {},
    "source": [
     "#### Step 2: Define An AMC Workflow Query and Set An AMC Workflow Record. \n",
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60325fef",
+   "id": "85b65bd5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "917ef717",
+   "id": "b92d8633",
    "metadata": {},
    "source": [
     "__NOTE__: This is just one example of a workflow query you can run on your AMC Instance. Refer to the Interactive Query Library (IQL) in the AMC UI for a list of other queries for different use cases. Queries can also be customized for you unique use case as well."
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea6c9127",
+   "id": "fa44171c",
    "metadata": {},
    "source": [
     "##### Create The AMC Workflow Record\n",
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e6b0e15",
+   "id": "3efce523",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69eb447e",
+   "id": "835c7fd8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "152152a2",
+   "id": "f4e44df8",
    "metadata": {},
    "source": [
     "#### Step 3: Invoke the AMC Workflow to be Executed Ad Hoc\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99dda15c",
+   "id": "84123851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,13 +322,15 @@
     "    }\n",
     "  },\n",
     "  \"Name\": f'wfm-{customer_id}-time_to_conversion'\n",
-    "}"
+    "}\n",
+    "\n",
+    "print(json.dumps(workflow, indent=4))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13bca566",
+   "id": "baddbdc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeadeb6f",
+   "id": "cf57d1e3",
    "metadata": {},
    "source": [
     "__NOTE__: In this example we are invoking the time_to_conversion workflow to be run once. Workflows can also be set up to run on pre-defined schedules custom to your use case. Refer to the `workflowLibrary_wfm_sample` and `workflowSchedules_wfm_sample` notebooks for more information."
@@ -346,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbc6bef2",
+   "id": "bf29beab",
    "metadata": {},
    "source": [
     "#### Your workflow is now being processed and executed. \n",
@@ -359,7 +361,84 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5acf752c",
+   "id": "89cfcc1f",
+   "metadata": {},
+   "source": [
+    "### Add Lake Formation Permissions To Your IAM Role\n",
+    "\n",
+    "We must add AWS Lake Formation permissions for the IAM role used to access this AWS Account in order for the IAM Role to be able to select and query the data with Athena. \n",
+    "\n",
+    "Here we use the `QSHelperFunctions` class to help us grant Lake Formation Permissions for our specific IAM Role to our specific Glue Database:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8436a574",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from quicksight_helper_functions.quicksight_functions import QSHelperFunctions\n",
+    "import awswrangler as wr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fed91aa1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs = QSHelperFunctions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cbf4066",
+   "metadata": {},
+   "source": [
+    "**Edit the below cell to add your IAM Role Name and the Glue DB Name:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b72f0f25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##ENTER YOUR IAM ROLE NAME\n",
+    "role_name=\"<ENTER ROLE NAME>\" \n",
+    "\n",
+    "##ENTER THE NAME OF YOUR GLUE DATABASE\n",
+    "glue_db=\"<ENTER GLUE DB NAME>\"\n",
+    "\n",
+    "accountid=wr.sts.get_account_id()\n",
+    "admin_role_arn_if = f'arn:aws:iam::{accountid}:role/{role_name}'\n",
+    "admin_role_arn_if"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f4a24ff",
+   "metadata": {},
+   "source": [
+    "**Add admin role to lakeformation with SELECT permissions, using helper functions:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f656137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qs.grant_permission_lf(admin_role_arn_if, glue_db, [\"SELECT\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99760076",
    "metadata": {},
    "source": [
     "### Optional : Data Visualization Using Workflow Query Results\n",
@@ -376,17 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd48a856",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install awswrangler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01735122",
+   "id": "73709ebd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,8 +463,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import numpy as np\n",
-    "import awswrangler as wr\n",
     "import pandas as pd\n",
+    "import awswrangler as wr\n",
     "from datetime import datetime\n",
     "import matplotlib.ticker as mtick"
    ]
@@ -403,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70633d9b",
+   "id": "36a836c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3baa403f",
+   "id": "68e6f44d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63844ff",
+   "id": "4835bdf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aabadfff",
+   "id": "81929eec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,19 +596,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d024cb9",
+   "id": "4d8a7387",
    "metadata": {},
    "source": [
     "#### Data Visualization Using QuickSight Dashboards\n",
     "\n",
     "If you require more advanced and customizable data visualizations consider using Amazon QuickSight as your BI Tool.  With Amazon QuickSight you can perform advanced analytics, gather machine learning (ML) insights and embed interactive visualizations and dashboards with natural language query capabilities. Refer to the AMC QuickStart FAQ to find more information on how to set up your own Amazon QuickSight Dashboards."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d6e966aa",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
