Remove Unnecessary Comments, Pass Security Checks, Restructure PMN Notebooks

--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
@@ -378,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from quicksight_helper_functions.quicksight_functions import QSHelperFunctions\n",
+    "from quicksight.quicksight_helper_functions.quicksight_functions import QSHelperFunctions\n",
     "import awswrangler as wr"
    ]
   },
