--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/quicksight/manage_quicksight.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/quicksight/manage_quicksight.ipynb
@@ -92,6 +92,7 @@
    "source": [
     "#Set QuickSight Variables \n",
     "data_source_name=\"amc_data_source_test\"\n",
+    "dataset_name=\"amc_data_set\"\n",
     "template_name = \"amc_template\"\n",
     "analysis_name = \"amc_time_to_conversion_analysis\"\n",
     "dashboard_name=\"amc_dataset_dashboard\"\n",
@@ -101,11 +102,7 @@
     "glue_table=\"<ENTER YOUR GLUE TABLE NAME HERE>\"\n",
     "\n",
     "region=\"us-east-1\" #CHANGE TO YOUR AWS REGION\n",
-    "accountid=wr.sts.get_account_id()\n",
-    "\n",
-    "#DO NOT CHANGE\n",
-    "dataset_name=\"amc_data_set\" #MUST BE SAME AS DATASET NAME AS ONE USED FOR PUBLIC TEMPLATE FROM AMC\n",
-    "template_arn = \"arn:aws:quicksight:us-east-1:458832654192:template/amc_template\" #PUBLIC TEMPLATE ARN FROM AMC\n"
+    "accountid=wr.sts.get_account_id()"
    ]
   },
   {
@@ -258,9 +255,9 @@
    "id": "0f1c6c64",
    "metadata": {},
    "source": [
-    "### Replicate Quicksight Template from The Public AMC Template\n",
+    "### Check to see if you have a QuickSight Template in your QuickSight Account\n",
     "\n",
-    "The following cell copies the public QuickSight template provided by AMC into our own AWS Account:"
+    "The following cell lists all of the QuickSight templates in your AWS Account, if any exist. A template is required in your AWS Account in order to create continue using this notebook and create a QuickSight Dashboard or QuickSight Analysis:"
    ]
   },
   {
@@ -270,7 +267,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "qs.copy_template_from_amc_template(template_name, username_list, region, template_arn)"
+    "templates = wr.quicksight.list_templates()\n",
+    "templates"
    ]
   },
   {
@@ -278,7 +276,7 @@
    "id": "78f3be58",
    "metadata": {},
    "source": [
-    "**Ensure the Template Copied From AMC is Listed Below After Running This Cell:**"
+    "**Copy the template name in the cell below. This template will be used to create a QuickSight Dashboard and/or Analysis in the following steps.**"
    ]
   },
   {
@@ -288,8 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "templates = wr.quicksight.list_templates()\n",
-    "templates"
+    "template_name = \"<ENTER TEMPLATE NAME>\""
    ]
   },
   {
