--- a/docs/deployment_guide/partner_editable/pre_deployment.adoc
+++ b/docs/deployment_guide/partner_editable/pre_deployment.adoc
@@ -250,3 +250,172 @@ _Create Workflows:_ To initialize the creation, scheduling and execution of AMC 
 - Send execution requests to an SQS queue rather than directly to the AMC endpoint to prevents timeout failures when there are large number of requests in a short period of time
 - Scheduled with dynamic relative time windows rather than using AMC's scheduling feature which only allows predefined scheduled reporting such as Daily or Weekly
 - Track the status of all workflow executions for customer AMC instances whether they are submitted through WFM or other means (postman, etc.). Having the status synced to DynamoDB allows events to be triggered or notifications to be sent when executions change state. This table can also be used to track historical executions for troubleshooting or performance monitoring.
+
+== Building Your First QuickSight Dashboard
+The following section walks you through how to build a QuickSight dashboard with a report from Amazon Marketing Cloud (AMC). With AMC enabling advertisers to query event level data within a privacy friendly environment and Amazon QuickSight offering users a cloud-powered business analytics service to build visualizations, perform ad-hoc analysis, and quickly get business insights from their data - you can begin to build out a business intelligence strategy. 
+
+Advertisers can use QuickSight to analyze reports from AMC to identify valuable insights and then scheduling, publishing dashboards to provide marketing insights in one central location. Custom-built dashboards can pull from a series of custom workflows built on a scheduled cadence. 
+
+Note: As a prerequisite, you should have executed at least one Time to Conversion query against AMC. The result will be used in this section to populate a QuickSight visualization.
+
+=== Initial QuickSight Setup
+You will need author access to a QuickSight Account to get started with building your first dashboard. If you don't have a QuickSight account already, below are the steps to create one.
+
+1. Launch the **AWS Console** (https://console.aws.amazon.com) in a new browser tab, search for **QuickSight** and launch it.
+2. On the **QuickSight** page, click **Sign up for QuickSight** button.
+3. Keep the default **Enterprise** edition, scroll down and click the **Continue** button.
+4. Enter a **QuickSight account name** & **Notification email address**. Enter your official email as the notification email.
+5. Scroll down and click the **Finish** button. (It can take 15-30 Secs to set up the account)
+6. Click the **Go to Amazon QuickSight** button. You will now be taken to QuickSight console.
+
+=== Authorize Your QuickSight Connection
+To work with Lake Formation and Athena, make sure that you have AWS resource permissions configured in Amazon QuickSight:
+
+* Enable access to Amazon Athena.
+* Enable access to the correct buckets in Amazon S3 Usually S3 access is enabled when you enable Athena. However, because you can change S3 permissions outside of that process, it's a good idea to verify them separately
+
+Use the following procedure to make sure that you successfully authorized Amazon QuickSight to use Athena. Permissions to AWS resources apply to all Amazon QuickSight users.
+
+To perform this action, you must be an Amazon QuickSight administrator. To check if you have access, verify that you see the Manage QuickSight option when you open the menu from your profile at upper right.
+
+For more information, review: https://docs.aws.amazon.com/quicksight/latest/user/lake-formation.html 
+
+**To authorize Amazon QuickSight to access Athena and Amazon S3:**
+
+1. Choose your profile name (upper right). Choose **Manage QuickSight**, and then choose **Security & permissions**.
+2. Under **QuickSight access to AWS services**, choose **Manage**.
+3. Find **Athena** in the list. Clear the box by Athena, then select it again to enable Athena. Then choose **Next**.
+4. Under **S3 Bucket**, choose the S3 buckets that you want to access from Amazon QuickSight.
+5. From the right column, **Write permission for Athena Workgroup**, choose the S3 buckets you could write your Athena results too.
+6. Choose **Finish** to confirm your selection or choose **Cancel** to exit without saving.
+7. Click **Save**, to update your new settings for Amazon QuickSight access to AWS services or choose **Cancel** to exit without making any changes.
+
+**To authorize Amazon QuickSight through AWS Lake Formation:**
+
+1. Collect the Amazon Resource Names (ARNs) of the Amazon QuickSight users and groups that need to access the data in Lake Formation. These users should be Amazon QuickSight authors or administrators.
+  a. Use the AWS CLI to find user ARNs or you can construct the ARNs for each user manually.
+  b. To construct manually, replace **REGION_NAME**, **ACCOUNT_ID**, and **QUICKSIGHT_USERNAME**: ```arn:aws:quicksight:<REGION_NAME>:<ACCOUNT_ID>:user/default/<QUICKSIGHT_USERNAME>```
+  c. To collect user ARNs programmatically, run the following list-users command in your terminal (Linux or Mac) or at your command prompt (Windows): ```aws quicksight list-users --aws-account-id 111122223333 --namespace default --region us-east-1```
+2. Next, Sign in to the AWS Console and navigate to AWS Lake Formation as the data lake administrator. A data lake administrator can grant any principal (IAM, QuickSight, or Active Directory) permissions to Data Catalog resources (databases and tables) or data lake locations in Amazon S3.
+3. Choose **Databases**.
+4. Select the circle next to the database you want to grant access to your QuickSight user.
+5. From the **Actions** drop-down menu, choose **Grant**.
+6. Select **SAML users and groups** and enter the QuickSight user ARN.
+7. Then click into **Named data catalog resources**
+8. Under Tables, open the drop-down menu and select All tables or selectively choose individual tables to permission access to. 
+9. For **Table permissions**, choose **Select** and **Describe**.
+10. Then click **Grant**.
+11. Repeat the preceding steps to grant multiple database permissions to your QuickSight user ARN or other users and groups.
+
+
+=== Query & Visualize Your First AMC Use Case 
+In this section, you'll step through how to build and analyze a visualization for the Time to Conversion use case.
+
+#### Overview
+
+Advertisers may typically ask - how long does it takes for our customers to convert after last seeing our ad? This use case will enable you with the dimensions and metrics to answer that question. 
+
+It is important to understand how long it takes customers who see your ad to complete the conversion, and how that impacts the data you see in your conversion report. Sometimes the conversions happen rapidly, within a few minutes and other times, it might take days for your customers to complete the purchase. You can use this information to adjust the duration of your campaign and promotion to maximize sales.
+
+
+.Key Performance Indicators (KPIs)
+:===
+KPI : Definition
+
+Time to Conversion:The amount of time customers take from last seeing your ad to purchase. The time has been converted to minutes, hours and days from seconds in the query template. You may adjust it based on your use case.
+
+Purchases:The number of times any amount of a promoted product or products are included in a purchase event. Purchase events include video rentals and new Subscribe & Save subscriptions. Sum of purchases from users_that_purchased.
+
+Total Brand Purchases:The number of times any number of products are included in a single purchase event. Purchase events include Subscribe & Save subscriptions and video rentals. This counts purchases for promoted products as well as products from the same brands as the products tracked in the order. (Total purchases = Purchases + Purchases Brand Halo)
+:===
+
+
+#### Creating the Visualization:
+This section provides details on how to create a visualization for the Time to Conversion use case in Amazon QuickSight.
+
+1. Begin by creating a new dataset. Choose **Datasets** from the navigation pane at left, then choose **New dataset**.
+2. Next, connect to an Athena Data Source with either a using an existing connection profile (more common) or by creating a new one.
+  A. To use an existing Athena connection profile, scroll down to the **FROM EXISTING DATA SOURCES** section, and choose the card for the existing data source that you want to use. Choose **Create dataset**. Cards are labeled with the Athena data source icon and the name provided by the person who created the connection.
+  B. Next, create a new Athena connection profile, use the following steps:
+    a. In the **FROM NEW DATA SOURCES** section, choose the **Athena** data source card.
+    b. For **Data source name**, enter a descriptive name
+    c. For **Athena workgroup**, choose your workgroup
+    d. Choose **Validate connection** to test the connection
+    e. Choose **Create data source**.
+3. On the **Choose your table screen**, do the following:
+  A. For **Catalog**, choose **AwsDataCatalog**.
+  B. Choose one of the following:
+    a. To choose the database and table created for the Time to Conversion use case, choose your database from the dropdown under **Database** and choose the Time to Conversion table from the **Tables** list that appears for your database.
+    b. You can optionally pull the data in with a SQL query, by choosing **Use custom SQL**
+4. Choose **Select**
+5. Create a dataset and analyze the data using the table by choosing **Visualize**. 
+  a. In the **Fields list** pane, choose **purchases**, **time_to_conversion**, and **total_brand_purchases**.
+  b. Amazon QuickSight uses AutoGraph to create the visual, selecting the visual type that it determines is most compatible with those fields. In this case, it selects a horizontal bar chart that shows the purchases and total_brand_purchases by time_to_conversion.
+  c. In the **Visual types** pane, select **Vertical bar chart** to rotate the chart.
+  d. Expand the **Field wells** pane by choosing the expand icon.
+  e. Choose the **X axis** field well, choose **Sort by**, and then choose **time_to_conversion**. 
+  f. Again from the **X axis** field well, select the **ascending** icon.
+6. Add a Title to the visual
+  a. On the visual's right, choose the **Format visual** icon.
+  b. In the **Format Visual** pane that opens on the left, choose the **Title** tab.
+  c. Choose **Edit title**
+  d. In the **Edit title** page that opens, type **Purchases by Time to Conversion**
+  e. When you're finished editing, choose **Save**.
+7. Change the x-axis label
+  a. Again, in the **Format Visual** pane open on the left, choose the **X-axis** tab.
+  b. In the text box below **time_to_conversion**, enter in **Time to Conversion**.
+  c. Close the **Format Visual** pane by choosing the X icon in the upper-right corner of the pane.
+8. Add data labels to your chart
+  a. Next, in the **Format Visual** pane open on the left, choose the **Data Labels** tab.
+  b. Check the box to the left of **Show data labels** to show and customize labels.
+  c. Close the **Format Visual** pane by choosing the X icon in the upper-right corner of the pane.
+9. Add Filters
+  a. On the far left pane, choose **Filter**
+  b. Then in the Filters pane, choose the **+** in the top right corner.
+  c. Select **advertiser**, then repeat for **campaign** and **file_last_modified**
+10. Use a combination of the filters to analyze the performance by time period, to identify windows with the highest conversion rates.
+
+image::../images/quicksight-time-to-conversion.png[QuickSightTimeToConversion]
+Figure 6. Verical Bar Chart visual in Amazon QuickSight for the Purchases by Time to Conversion AMC use case
+
+For further information on customizing visualizations checkout: https://docs.aws.amazon.com/quicksight/latest/user/working-with-visuals.html
+
+//== Best practices for using {partner-product-short-name} on AWS
+// Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
+
+//_Add any best practices for using the software._
+
+//== Security
+// Provide post-deployment best practices for using the technology on AWS, including considerations such as migrating data, backups, ensuring high performance, high availability, etc. Link to software documentation for detailed information.
+
+//_Add any security-related information._
+
+//== Other useful information
+//Provide any other information of interest to users, especially focusing on areas where AWS or cloud usage differs from on-premises usage.
+
+//_Add any other details that will help the customer use the software on AWS._
+
+
+== Cleaning Up the {partner-product-short-name}
+
+Once the solution has been deployed and tested, use the following command to clean up the resources deployed:
+
+```
+$ make delete_all
+```
+
+_NOTE:_ Before running this command, look into the `Makefile` and ensure that:
+
+1.  The `delete_repositories` function is passing the correct `-d AMC_QUICKSTART_REPO_NAME` (default: `ddk-amc-quickstart`)
+
+2.  The `delete_bootstrap` function is passing the correct `--stack-name BOOTSTRAP_STACK_NAME` (default: `DdkDevBootstrap`)
+
+This command will go through the following sequence of steps in order to clean up your AWS account environment:
+
+![Alt](docs/images/AMC-Quickstart-Delete.png)
+
+Some CloudWatch General Log Groups May Remain in your Account with Logs specific to AMC Quickstart resources, including:
+
+- /aws/sagemaker/NotebookInstances
+- /aws-glue/jobs/error
+- /aws-glue/jobs/output
