Add docs for QS Automation and Multiple Workflows

--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/Getting_Started_With_AMC_Quickstart.ipynb
@@ -356,7 +356,7 @@
     "\n",
     "- Continue exploring the notebooks in the `client_manager_microservices` folder for further documentation on how to onboard new clients\n",
     "\n",
-    "- Continue exploring the notebooks in the `datalake_hydration_microservices` folder for further documentation on how to schedule and manage your workflows."
+    "- Continue exploring the notebooks in the `datalake_hydration_microservices` folder for further documentation on how to schedule and manage your workflows and submit multiple workflows."
    ]
   },
   {
