--- a/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/wfm_GettingStarted.ipynb
+++ b/amc_quickstart/microservices/platform_management_notebooks/platform_manager/datalake_hydration_microservices/wfm/wfm_GettingStarted.ipynb
@@ -31,6 +31,8 @@
     "\n",
     "#### 5. workflow_invoke_wfm_sample - This notebook provide steps to run a workflow on demand. These workflows should already be registered in the AMC instance.\n",
     "\n",
+    "#### 6. workflow_manage_multiple_workflows - This notebook provide steps to add multiple Workflows, Workflow Schedules, Workflow Libraries and invoke multiple Workflow executions.\n",
+    "\n",
     "#### Please refer to the FAQ Section at the bottom of this notebook for more guidance.\n",
     "\n",
     "#### To create and run an example workflow to hydrate your data lake, edit and run the notebook cells below\n",
